--- a/src/html/and.html
+++ b/src/html/and.html
@@ -144,11 +144,12 @@
     <span style="color: #eeeb42; font-weight: bold">sta</span><span style="color: white;"> value </span><span style="color: #83f383;">       // Updates value (with bit 5 off)</span>
           </pre>
       </div>
+      <br>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
