--- a/src/html/register.html
+++ b/src/html/register.html
@@ -20,10 +20,10 @@
   <div id="page-container">
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; ">Register Instructions<br>Placeholder</h1>
+        <h1 style="text-align:center; padding-top: 40px;">Register Instructions<br>Placeholder</h1>
       </div>
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
