--- a/src/html/sec.html
+++ b/src/html/sec.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">SEC</h1>
-        <h2 style="text-align:center; ">SEt Carry Flag</h2>
-        <h2 style="text-align:center; ">Operation: 1 =&gt; C</h2>
+        <h2 style="text-align:center;">SEt Carry Flag</h2>
+        <h2 style="text-align:center;">Operation: 1 =&gt; C</h2>
       </div>
       <br><br>
 
@@ -83,10 +83,10 @@
 
       <p>This instruction is primarily necessary to facilitate the use of the instruction sbc, or to force relative branches using bcc and bcs.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdFLAG()">Flag Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Flag Instructions" class="button buttonNAVIGATION" onclick="cmdFLAG()">Flag Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
