--- a/src/html/bcc.html
+++ b/src/html/bcc.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">BCC</h1>
-        <h2 style="text-align:center; ">Branch on Carry Clear</h2>
-        <h2 style="text-align:center; ">Operation: Jump if C = 0</h2>
+        <h2 style="text-align:center;">Branch on Carry Clear</h2>
+        <h2 style="text-align:center;">Operation: Jump if C = 0</h2>
       </div>
       <br><br>
 
@@ -95,9 +95,11 @@
 
       <div class="codeblock">
         <pre style="margin: 0;">
-             <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: salmon;"> #</span><span style="color: powderblue;">$32</span><span style="color: #83f383;">            // Loads the number $32 in the accumulator</span>
+             <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: salmon;"> #</span><span style="color: powderblue;">$32</span><span style="color: #83f383;">            // Loads the number $32 in</span>
+             <span style="color: #83f383;">                    //  the accumulator</span>
              <span style="color: #eeeb42; font-weight: bold">cmp</span><span style="color: white;"> value1 </span><span style="color: #83f383;">         // compare $32 with value1</span>
-             <span style="color: #eeeb42; font-weight: bold">bcc</span><span style="color: white;"> value1_less </span><span style="color: #83f383;">    // if a &lt; value1, branch to value1_less</span>
+             <span style="color: #eeeb42; font-weight: bold">bcc</span><span style="color: white;"> value1_less </span><span style="color: #83f383;">    // if a &lt; value1, branch</span>
+             <span style="color: #83f383;">                    //  to value1_less</span>
              <span style="color: #eeeb42; font-weight: bold">rts</span>
 <span style="color: white;">value1_less: </span><span style="color: #eeeb42; font-weight: bold">nop</span><span style="color: #83f383;">                 // we reach here if value1 &lt; $32</span>
           </pre>
@@ -118,9 +120,11 @@
         <pre style="margin: 0;">
        <span style="color: #eeeb42; font-weight: bold">clc</span><span style="color: #83f383;">          // C = 0</span>
        <span style="color: #eeeb42; font-weight: bold">bcc</span><span style="color: white;"> jump </span><span style="color: #83f383;">    // This is a relative jmp (forced)</span>
-            <span style="color: #83f383;">        // Which makes this part of the routine relocatable.</span>
-<span style="color: white;">jump:  </span><span style="color: #eeeb42; font-weight: bold">jmp<span style="color: white;"> jump2 </span><span style="color: #83f383;">   // this jmp is absolute</span>
-            <span style="color: #83f383;">        // so this part couldn't be relocated without modifications</span>
+            <span style="color: #83f383;">        // Which makes this part of the routine</span>
+            <span style="color: #83f383;">        //  relocatable.</span>
+<span style="color: white;">jump:  </span><span style="color: #eeeb42; font-weight: bold">jmp</span><span style="color: white;"> jump2 </span><span style="color: #83f383;">   // this jmp is absolute</span>
+            <span style="color: #83f383;">        // so this part couldn't be relocated without</span>
+            <span style="color: #83f383;">        // modifications</span>
 <span style="color: white;">jump2: </span><span style="color: #eeeb42; font-weight: bold">rts</span>
          </pre>
       </div>
@@ -129,10 +133,10 @@
         operations.
       </p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdBRANCH()">Branch Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Branch Instructions" class="button buttonNAVIGATION" onclick="cmdBRANCH()">Branch Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
