--- a/src/html/bit.html
+++ b/src/html/bit.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">BIT</h1>
-        <h2 style="text-align:center; ">Test bits in memory with accumulator</h2>
-        <h2 style="text-align:center; ">Operation: A &amp; M, M7 =&gt; N, M6 =&gt; V</h2>
+        <h2 style="text-align:center;">Test bits in memory with accumulator</h2>
+        <h2 style="text-align:center;">Operation: A &amp; M, M7 =&gt; N, M6 =&gt; V</h2>
       </div>
       <br><br>
 
@@ -94,10 +94,10 @@
 
       <p>Is a form of testing important bits in the accumulator without affecting its contents, as would happen if we did this with and.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdCOMPARE()">Compare Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Compare Instructions" class="button buttonNAVIGATION" onclick="cmdCOMPARE()">Compare Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
