--- a/src/html/brk.html
+++ b/src/html/brk.html
@@ -21,8 +21,9 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">BRK</h1>
-        <h2 style="text-align:center; ">Forced Break</h2>
-        <h4 style="text-align:center; ">Operation: Forces software interrupt, transfer to stack PC+2 and P</h4>
+        <h2 style="text-align:center;">Forced Break</h2>
+        <h4 style="text-align:center;">Operation: Forces software interrupt</h4>
+        <h4 style="text-align:center;">transfer to stack PC+2 and P</h4>
       </div>
       <br><br>
 
@@ -89,10 +90,10 @@
 
       <p>Note: a brk instruction cannot be masked touching the I flag.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdOTHER()">View Other Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Other Instructions" class="button buttonNAVIGATION" onclick="cmdOTHER()">View Other Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
