--- a/src/html/bvc.html
+++ b/src/html/bvc.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">BVC</h1>
-        <h2 style="text-align:center; ">Branch on oVerflow Clear</h2>
-        <h2 style="text-align:center; ">Operation: Jump if V = 0</h2>
+        <h2 style="text-align:center;">Branch on oVerflow Clear</h2>
+        <h2 style="text-align:center;">Operation: Jump if V = 0</h2>
       </div>
       <br><br>
 
@@ -109,10 +109,10 @@
         operations.
       </p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdBRANCH()">Branch Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Branch Instructions" class="button buttonNAVIGATION" onclick="cmdBRANCH()">Branch Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
