--- a/src/html/jmp.html
+++ b/src/html/jmp.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">JMP</h1>
-        <h2 style="text-align:center; ">JuMP to new location</h2>
-        <h2 style="text-align:center; ">Operation: (PC+1) =&gt; PCL, (PC+2) =&gt; PCH</h2>
+        <h2 style="text-align:center;">JuMP to new location</h2>
+        <h2 style="text-align:center;">Operation: (PC+1) =&gt; PCL, (PC+2) =&gt; PCH</h2>
       </div>
       <br><br>
 
@@ -90,10 +90,10 @@
         jumped to. In the operative system of the C64 (called the Kernal) this addressing mode is used so the user can change vectors in RAM to call the system routines. Also this is exploited to patch certain routines into our customized ones easily.
         You could use this for example to add new basic commands, like Simon's Basic did.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdJUMP()">Jump Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Jump Instructions" class="button buttonNAVIGATION" onclick="cmdJUMP()">Jump Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
