--- a/src/html/ldy.html
+++ b/src/html/ldy.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">LDY</h1>
-        <h2 style="text-align:center; ">LoaD index Y with memory</h2>
-        <h2 style="text-align:center; ">Operation: M =&gt; Y</h2>
+        <h2 style="text-align:center;">LoaD index Y with memory</h2>
+        <h2 style="text-align:center;">Operation: M =&gt; Y</h2>
       </div>
       <br><br>
 
@@ -113,10 +113,10 @@
 
       <p>Retrieves a copy from the specified RAM or I/O address, and stores it in the Y index register. The content of the memory location is not affected by the operation.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdMEMORY()">Memory Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Memory Instructions" class="button buttonNAVIGATION" onclick="cmdMEMORY()">Memory Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
