--- a/src/html/nop.html
+++ b/src/html/nop.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">NOP</h1>
-        <h2 style="text-align:center; ">No OPeration</h2>
-        <h2 style="text-align:center; ">Operation: No Operation (2 cycles)</h2>
+        <h2 style="text-align:center;">No OPeration</h2>
+        <h2 style="text-align:center;">Operation: No Operation (2 cycles)</h2>
       </div>
       <br><br>
 
@@ -83,10 +83,10 @@
         of cycles. But the main task of this particular instruction is to facilitate debugging. It is very convenient to insert a few NOP instructions to "turn off" temporarily sections of code that we think may be causing problems or for patching sections
         of code.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdOTHER()">View Other Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Other Instructions" class="button buttonNAVIGATION" onclick="cmdOTHER()">View Other Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
