--- a/src/html/pla.html
+++ b/src/html/pla.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">PLA</h1>
-        <h2 style="text-align:center; ">PulL Accumulator from stack</h2>
-        <h4 style="text-align:center; ">Operation: Extracts a byte from the stack and loads it into Accumulator</h4>
+        <h2 style="text-align:center;">PulL Accumulator from stack</h2>
+        <h4 style="text-align:center;">Operation: Extracts a byte from the stack and loads it into Accumulator</h4>
       </div>
       <br><br>
 
@@ -112,10 +112,10 @@
         in which they were introduced we won't get his values correctly. Of course sometimes this order would be conveniently inverted in cases when we need to revert some register value for another, but in general is better, in order to gain some valuable
         clock cycles, to do this task with transfer or load/store instructions (especially with Zero Page addressing).</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdSTACK()">Stack Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Stack Instructions" class="button buttonNAVIGATION" onclick="cmdSTACK()">Stack Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
