--- a/src/html/plp.html
+++ b/src/html/plp.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">PLP</h1>
-        <h2 style="text-align:center; ">PulL Processor status from stack</h2>
-        <h4 style="text-align:center; ">Operation: Pulls a byte from stack and puts it in P</h4>
+        <h2 style="text-align:center;">PulL Processor status from stack</h2>
+        <h4 style="text-align:center;">Operation: Pulls a byte from stack and puts it in P</h4>
       </div>
       <br><br>
 
@@ -79,12 +79,12 @@
         </tr>
       </table>
 
-      <p style="text-align:center;">PLP "affects" potentially all seven processor status flags, and in theory even the unused bit #5 in the byte formed by the flags, since a new "state" for each flag is retrieved from the stack.</p>
+      <p style="text-align:center;">PLP 'affects' potentially all seven processor status flags, and in theory even the unused bit #5 in the byte formed by the flags, since a new "state" for each flag is retrieved from the stack.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdSTACK()">Stack Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Stack Instructions" class="button buttonNAVIGATION" onclick="cmdSTACK()">Stack Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
