--- a/src/html/ror.html
+++ b/src/html/ror.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">ROR</h1>
-        <h2 style="text-align:center; ">Rotate One bit Right - memory or accumulator</h2>
-        <h2 style="text-align:center; ">Operation: C =&gt; <span style="background-color: #867BE4;">7 6 5 4 3 2 1 0</span> =&gt; C</h2>
+        <h2 style="text-align:center;">Rotate One bit Right - memory or accumulator</h2>
+        <h2 style="text-align:center;">Operation: C =&gt; <span style="background-color: #867BE4;">7 6 5 4 3 2 1 0</span> =&gt; C</h2>
       </div>
       <br><br>
 
@@ -113,10 +113,10 @@
 
       <p>The contents of the Carry flag is put into the bit 7, and bit 0 is moved to the Carry. This results in a circular displacement of 9 bits.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
