--- a/src/html/rti.html
+++ b/src/html/rti.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">RTI</h1>
-        <h2 style="text-align:center; ">Return from interrupt</h2>
-        <h3 style="text-align:center; ">Operation: Retrieves P, and PC from stack, in this order.</h3>
+        <h2 style="text-align:center;">ReTurn from Interrupt</h2>
+        <h3 style="text-align:center;">Operation: Retrieves P, and PC from stack, in this order.</h3>
       </div>
       <br><br>
 
@@ -87,10 +87,10 @@
 
       <p>Restoring the P register ensures that after the interruption, the execution will continue normally as if nothing had happened.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdJUMP()">Jump Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Jump Instructions" class="button buttonNAVIGATION" onclick="cmdJUMP()">Jump Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
