--- a/src/html/rts.html
+++ b/src/html/rts.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">RTS</h1>
-        <h2 style="text-align:center; ">ReTurn from Subroutine</h2>
-        <h2 style="text-align:center; ">Operation: Saves PC in stack, PC+1 =&gt; PC</h2>
+        <h2 style="text-align:center;">ReTurn from Subroutine</h2>
+        <h2 style="text-align:center;">Operation: Saves PC in stack, PC+1 =&gt; PC</h2>
       </div>
       <br><br>
 
@@ -84,10 +84,10 @@
       <p>With this command the end of a subroutine is expresed, and causes the return address to be pulled off the stack. Note that since there are instructions to manipulate the stack that return address could be changed. Also one RTS without his matching
         JSR could be used to jump to the address (plus 1) stored in the stack.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdJUMP()">Jump Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Jump Instructions" class="button buttonNAVIGATION" onclick="cmdJUMP()">Jump Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
