--- a/src/html/sbc.html
+++ b/src/html/sbc.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">SBC</h1>
-        <h2 style="text-align:center; ">SuBstract memory from accumulator with borrow</h2>
-        <h2 style="text-align:center; ">Operation: A - M - !C =&gt; A</h2>
+        <h2 style="text-align:center;">SuBstract memory from accumulator with borrow</h2>
+        <h2 style="text-align:center;">Operation: A - M - !C =&gt; A</h2>
       </div>
       <br><br>
 
@@ -155,11 +155,12 @@
     <span style="color: #eeeb42; font-weight: bold">sta</span><span style="color: white;"> HIBYTE </span><span style="color: #83f383;">      // HIBYTE = a</span>
         </pre>
       </div>
+      <br>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdMATH()">Math Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Math Instructions" class="button buttonNAVIGATION" onclick="cmdMATH()">Math Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
