--- a/src/html/sed.html
+++ b/src/html/sed.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">SED</h1>
-        <h2 style="text-align:center; ">SEt Decimal mode</h2>
-        <h2 style="text-align:center; ">Operation: Operation: 1 =&gt; D</h2>
+        <h2 style="text-align:center;">SEt Decimal mode</h2>
+        <h2 style="text-align:center;">Operation: Operation: 1 =&gt; D</h2>
       </div>
       <br><br>
 
@@ -82,12 +82,12 @@
       <p>Puts the microprocessor in Decimal Mode (for using Binary coded decimal numbers, BCD). In this mode each decimal digit is represented by 4 bits, in a way that one byte stores two decimal digits, namely a number between 00 and 99. When working in
         this mode a carry is automatically generated between bit 3 and 4 when the result is greater than 9 instead of $0F like it happens normally in the standard binary mode.</p>
 
-      <p>cld, restablishes the normal binary mode of operation.</p>
+      <p>CLD, restablishes the normal binary mode of operation.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdFLAG()">Flag Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Flag Instructions" class="button buttonNAVIGATION" onclick="cmdFLAG()">Flag Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
