--- a/src/html/stx.html
+++ b/src/html/stx.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">STX</h1>
-        <h2 style="text-align:center; ">STore index X in memory</h2>
-        <h2 style="text-align:center; ">Operation: X =&gt; M</h2>
+        <h2 style="text-align:center;">STore index X in memory</h2>
+        <h2 style="text-align:center;">Operation: X =&gt; M</h2>
       </div>
       <br><br>
 
@@ -95,10 +95,10 @@
 
       <p>Stores index register X in the address of memory specified by the operand.</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdMEMORY()">Memory Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Memory Instructions" class="button buttonNAVIGATION" onclick="cmdMEMORY()">Memory Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
