--- a/src/html/template.html
+++ b/src/html/template.html
@@ -21,13 +21,13 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">OPCODE</h1>
-        <h2 style="text-align:center; ">Description</h2>
-        <h2 style="text-align:center; ">Operation:</h2>
+        <h2 style="text-align:center;">Description</h2>
+        <h2 style="text-align:center;">Operation:</h2>
         <br><br>
 
       </div>
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
