--- a/src/html/txs.html
+++ b/src/html/txs.html
@@ -21,8 +21,8 @@
     <div id="content-wrap">
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 20px;">TXS</h1>
-        <h2 style="text-align:center; ">Transfer index X to Stack pointer</h2>
-        <h2 style="text-align:center; ">Operation: X =&gt; S</h2>
+        <h2 style="text-align:center;">Transfer index X to Stack pointer</h2>
+        <h2 style="text-align:center;">Operation: X =&gt; S</h2>
       </div>
       <br><br>
 
@@ -81,10 +81,10 @@
 
       <p>Transfers the content of the index register X to the stack pointer register (S).</p>
 
-      <h2>Navigation:</h2>
-      <button class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
-      <button class="button buttonOPCODE" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button class="button buttonOPCODE" onclick="cmdSTACK()">Stack Instructions</button>
+      <h2 style="margin-left: 15px;">Navigation:</h2>
+      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+      <button style="margin-left: 15px;" title="View List of All Stack Instructions" class="button buttonNAVIGATION" onclick="cmdSTACK()">Stack Instructions</button>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
